stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_imported_nested_pattern_substitution.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_imported_nested_pattern_substitution.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Options.Some(Boxes.box) binds value:i64
stderr:
<empty>
