stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_imported_variant_payload_binding.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_imported_variant_payload_binding.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Options.Some binds value:i64
stderr:
<empty>
