stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_infer_trace.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_infer_trace.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
if condition: Bool vs Int | call argument parse: String vs List<Int> | list item: Int -> String vs Int -> Bool
stderr:
<empty>
