stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_lowering_metadata_substitution.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_lowering_metadata_substitution.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
lambda:value:box<i64>
air:item:Value
abi:option:Value
stderr:
<empty>
