stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_name_check.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_name_check.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
unknown name: missing
stderr:
<empty>
