stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_numeric_constraints.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_numeric_constraints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
negation needs number, got Bool / addition needs i64, got f64 / if condition needs Bool, got String / logical expression needs Bool, got i64
stderr:
<empty>
